Fixes display on mobile Adds finsihed text

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,7 @@
     margin-right: 10px
 }
 
+.cellResults {
+    min-width: 2000px;
+    overflow-x: scroll;
+}
